update to v2.1.0