@@ -1,7 +1,7 @@
 package com.greymerk.roguelike.editor.blocks;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import java.util.stream.IntStream;
 
 import com.greymerk.roguelike.dungeon.Difficulty;
@@ -20,31 +20,37 @@ import net.minecraft.util.math.random.Random;
 
 public class BookShelf {
 
-	public static void set(IWorldEditor editor, Random rand, Coord origin, Cardinal dir) {
+	public static void set(IWorldEditor editor, Random rand, Difficulty diff, Coord origin, Cardinal dir) {
 		
 		MetaBlock.of(Blocks.CHISELED_BOOKSHELF)
 			.with(HorizontalFacingBlock.FACING, Cardinal.facing(Cardinal.reverse(dir)))
 			.set(editor, origin);
 		
-		BlockEntity be = editor.getBlockEntity(origin);
-		
-		if(be == null) return;
+		Optional<BlockEntity> obe = editor.getBlockEntity(origin);
+		if(obe.isEmpty()) return;
+		BlockEntity be  = obe.get();
 		if(!(be instanceof ChiseledBookshelfBlockEntity)) return;
-		
 		ChiseledBookshelfBlockEntity shelf = (ChiseledBookshelfBlockEntity)be;
 		
 		getSlots(rand).forEach(i -> {
-			shelf.setStack(i, Enchant.getBook(editor.getRegistryManager(), rand, Difficulty.fromY(origin.getY())));		
+			shelf.setStack(i, Enchant.getBook(editor.getInfo().getRegistryManager(), rand, diff));		
 		});
 		
 		shelf.markDirty();
 	}
 	
 	private static List<Integer> getSlots(Random rand){
-		List<Integer> slots = IntStream.rangeClosed(0, 5).boxed().collect(Collectors.toList());
-		RandHelper.shuffle(slots, rand);
-		int count = rand.nextBetween(1, 3);
-		return slots.subList(0, count);
+		return IntStream.rangeClosed(0, 5)
+			.boxed()
+			.sorted(RandHelper.randomizer(rand))
+			.limit(slotCount(rand))
+			.toList();
+	}
+	
+	private static int slotCount(Random rand) {
+		if(rand.nextInt(10) == 0) return 3;
+		if(rand.nextInt(3) == 0) return 2;
+		return 1;
 	}
 	
 }
